<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/top_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/sky_blue"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/frnd_assignment"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_header"
        android:layout_margin="12dp"
        android:elevation="12dp"
        app:cardCornerRadius="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_header"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="7dp">

                <ImageButton
                    android:id="@+id/btn_pre_month"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_left_arrow_prev" />

                <TextView
                    android:id="@+id/tv_date_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:maxLines="1"
                    android:text="Dec 2021"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btn_nxt_month"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_right_arrow_next" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="7dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="7dp"
                    android:text="@string/sun"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="7dp"
                    android:text="@string/mon"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="7dp"
                    android:text="@string/tue"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="7dp"
                    android:text="@string/wed"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="7dp"
                    android:text="@string/thu"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="7dp"
                    android:text="@string/fri"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="7dp"
                    android:text="@string/sat"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calenderRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendarView"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_selected_date_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="7dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_total_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_selected_date_show"
            android:padding="7dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btn_add_new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_total_tasks"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_btn" />
    </RelativeLayout>
    <TextView
        android:id="@+id/btn_open_task_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/sky_blue"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/view_all_tasks"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:drawableEndCompat="@drawable/ic_right_arrow" />

</RelativeLayout>